--- a/index.html
+++ b/index.html
@@ -1,48 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="Css/main.css">
+    <link rel="stylesheet" href="Css/main.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-        rel="stylesheet">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
 
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
+  <body>
     <header>
-        <nav class="container">
-            <a href="#">
-                <img src="images/logo.svg" alt="">
-            </a>
-            <div class="navright">
-                <a href="#" style="color: #14bf98;">HOME</a>
-                <a href="#">INTRO</a>
-                <a href="#">SERVICE</a>
-                <a href="#">CALL ME</a>
-                <a href="#">PROJECT</a>
-                <a href="#">ABOUT <i class="fa-solid fa-caret-down"></i></a>
-                <a href="#">CONTACT</a>
+      <nav class="container">
+        <a href="#">
+          <img src="images/logo.svg" alt="" />
+        </a>
+        <div class="navright">
+          <a href="#" style="color: #14bf98">HOME</a>
+          <a href="#">INTRO</a>
+          <a href="#">SERVICE</a>
+          <a href="#">CALL ME</a>
+          <a href="#">PROJECT</a>
+          <a href="#">ABOUT <i class="fa-solid fa-caret-down"></i></a>
+          <a href="#">CONTACT</a>
 
-                <div class="sosialicons">
-                    <a href="#" class="hex_link">
-                        <span class="hexagon"></span>
-                        <i class="fa-brands fa-facebook-f"></i>
-                    </a>
-                    <a href="#" class="hex_link">
-                        <span class="hexagon"></span>
-                        <i class="fa-brands fa-twitter"></i>
-                    </a>
-                </div>
-            </div>
-        </nav>
+          <div class="sosialicons">
+            <a href="#" class="hex_link">
+              <span class="hexagon"></span>
+              <i class="fa-brands fa-facebook-f"></i>
+            </a>
+            <a href="#" class="hex_link">
+              <span class="hexagon"></span>
+              <i class="fa-brands fa-twitter"></i>
+            </a>
+          </div>
+        </div>
+      </nav>
     </header>
-    <section></section>
+    <section id="bimg">
+      <div class="centertext">
+        <h1>BUSINESS TEMPLATE</h1>
+        <p>
+          Aria is a top consultancy company specializing in business growth
+          using online marketing and conversion optimization tactics
+        </p>
+        <a href="#">DISCOVER</a>
+      </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
@@ -56,7 +72,9 @@
     <section></section>
     <footer></footer>
 
-    <script src="https://kit.fontawesome.com/7972087a8c.js" crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/7972087a8c.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
