--- a/index.html
+++ b/index.html
@@ -59,7 +59,26 @@
         <a href="#">DISCOVER</a>
       </div>
     </section>
-    <section></section>
+    <section id="intro" class="container">
+      <div class="left">
+        <h4>INTRO</h4>
+        <h2>We Offer Some Of The Best Business Growth Services In Town</h2>
+        <p>
+          Launching a new company or developing the market position of an
+          existing one can be quite an overwhelming processs at times.
+        </p>
+        <p>
+          <i>
+            "Our mission here at Aira is to get you through those tough moments
+            relying on our team's expertise in starting and growing companies."
+          </i>
+        </p>
+        <h3>Louise Donovan - CEO</h3>
+      </div>
+      <div class="right">
+        <img src="images/intro-office.jpg" alt="">
+      </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
