--- a/index.html
+++ b/index.html
@@ -1,99 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="Css/main.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="Css/main.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+    rel="stylesheet" />
 
-  <body>
-    <header>
-      <nav class="container">
-        <a href="#">
-          <img src="images/logo.svg" alt="" />
-        </a>
-        <div class="navright">
-          <a href="#" style="color: #14bf98">HOME</a>
-          <a href="#">INTRO</a>
-          <a href="#">SERVICE</a>
-          <a href="#">CALL ME</a>
-          <a href="#">PROJECT</a>
-          <a href="#">ABOUT <i class="fa-solid fa-caret-down"></i></a>
-          <a href="#">CONTACT</a>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet" />
+</head>
 
-          <div class="sosialicons">
-            <a href="#" class="hex_link">
-              <span class="hexagon"></span>
-              <i class="fa-brands fa-facebook-f"></i>
-            </a>
-            <a href="#" class="hex_link">
-              <span class="hexagon"></span>
-              <i class="fa-brands fa-twitter"></i>
-            </a>
-          </div>
+<body>
+  <header>
+    <nav class="container">
+      <a href="#">
+        <img src="images/logo.svg" alt="" />
+      </a>
+      <div class="navright">
+        <a href="#" style="color: #14bf98">HOME</a>
+        <a href="#">INTRO</a>
+        <a href="#">SERVICE</a>
+        <a href="#">CALL ME</a>
+        <a href="#">PROJECT</a>
+        <a href="#">ABOUT <i class="fa-solid fa-caret-down"></i></a>
+        <a href="#">CONTACT</a>
+
+        <div class="sosialicons">
+          <a href="#" class="hex_link">
+            <span class="hexagon"></span>
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+          <a href="#" class="hex_link">
+            <span class="hexagon"></span>
+            <i class="fa-brands fa-twitter"></i>
+          </a>
         </div>
-      </nav>
-    </header>
-    <section id="bimg">
-      <div class="centertext">
-        <h1>BUSINESS TEMPLATE</h1>
-        <p>
-          Aria is a top consultancy company specializing in business growth
-          using online marketing and conversion optimization tactics
-        </p>
-        <a href="#">DISCOVER</a>
       </div>
-    </section>
-    <section id="intro" class="container">
-      <div class="left">
-        <h4>INTRO</h4>
-        <h2>We Offer Some Of The Best Business Growth Services In Town</h2>
-        <p>
-          Launching a new company or developing the market position of an
-          existing one can be quite an overwhelming processs at times.
-        </p>
-        <p>
-          <i>
-            "Our mission here at Aira is to get you through those tough moments
-            relying on our team's expertise in starting and growing companies."
-          </i>
-        </p>
-        <h3>Louise Donovan - CEO</h3>
+    </nav>
+  </header>
+  <section id="bimg">
+    <div class="centertext">
+      <h1>BUSINESS TEMPLATE</h1>
+      <p>
+        Aria is a top consultancy company specializing in business growth
+        using online marketing and conversion optimization tactics
+      </p>
+      <a href="#">DISCOVER</a>
+    </div>
+  </section>
+  <section id="intro" class="container">
+    <div class="left">
+      <h4>INTRO</h4>
+      <h2>We Offer Some Of The Best Business Growth Services In Town</h2>
+      <p>
+        Launching a new company or developing the market position of an
+        existing one can be quite an overwhelming processs at times.
+      </p>
+      <p>
+        <i>
+          "Our mission here at Aira is to get you through those tough moments
+          relying on our team's expertise in starting and growing companies."
+        </i>
+      </p>
+      <h3>Louise Donovan - CEO</h3>
+    </div>
+    <div class="right">
+      <img src="images/intro-office.jpg" alt="">
+    </div>
+  </section>
+  <section id="cards">
+    <div class="card">
+      <div class="Hexagon">
+        <img src="images/hexagon-green.svg" alt="">
+        <i class="fa-solid fa-binoculars"></i>
       </div>
-      <div class="right">
-        <img src="images/intro-office.jpg" alt="">
+      <h4>Environment Analysis</h4>
+      <p>The starting point of any success story is knowing your current position in the business environment</p>
+    </div>
+    <div class="card">
+      <div class="Hexagon">
+        <img src="images/hexagon-green.svg" alt="">
+        <i class="fa-solid fa-list"></i>
       </div>
-    </section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <footer></footer>
+      <h4>Development Planning</h4>
+      <p>After completing the environmental analysis the next stage is to design and plan your development strategy</p>
+    </div>
+    <div class="card">
+      <div class="Hexagon">
+        <img src="images/hexagon-green.svg" alt="">
+        <i class="fa-solid fa-chart-pie"></i>
+      </div>
+      <h4>Execution & Evaluation</h4>
+      <p>In this phase you will focus on executing the actions plan and evaluating the results after each marketing
+        campaign</p>
+    </div>
+  </section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <footer></footer>
 
-    <script
-      src="https://kit.fontawesome.com/7972087a8c.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <script src="https://kit.fontawesome.com/7972087a8c.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
