--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <img src="images/intro-office.jpg" alt="">
     </div>
   </section>
-  <section id="cards">
+  <section id="cards" class="container">
     <div class="card">
       <div class="Hexagon">
         <img src="images/hexagon-green.svg" alt="">
