--- a/index.html
+++ b/index.html
@@ -103,7 +103,63 @@
         campaign</p>
     </div>
   </section>
-  <section></section>
+  <section id="services" class="container">
+    <div class="text">
+      <h4>SERVICES</h4>
+      <h2 class="margin">Choose The Service Package</h2>
+      <h2>That Suits Your Needs</h2>
+    </div>
+
+    <div class="price">
+      <div class="pricecard">
+        <div class="up">
+          <img src="images/services-1.jpg" alt="">
+        </div>
+        <div class="down">
+          <h3>Off The Ground</h3>
+          <p>Perfect for fresh ideas or young startups, this package will help get the business off the ground</p>
+          <p><i class="fa-solid fa-square"></i> Environment and competition</p>
+          <p><i class="fa-solid fa-square"></i> Designing the marketing plan</p>
+          <p class="price">Starting at <span class="num">$199</span></p>
+          <div class="link">
+            <a href="#">DETAILS</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="pricecard">
+        <div class="up">
+          <img src="images/services-2.jpg" alt="">
+        </div>
+        <div class="down">
+          <h3>Accelerated Growth</h3>
+          <p>Use this service pack to give your company the necessary impulse to become an industry leader</p>
+          <p><i class="fa-solid fa-square"></i> Business strategy planning</p>
+          <p><i class="fa-solid fa-square"></i> Taking the planned actions</p>
+          <p class="price">Starting at <span class="num">$299</span></p>
+          <div class="link">
+            <a href="#">DETAILS</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="pricecard">
+        <div class="up">
+          <img src="images/services-3.jpg" alt="">
+        </div>
+        <div class="down">
+          <h3>Market Domination</h3>
+          <p>You already are a reference point in your industry now you need to learn about acquisitions</p>
+          <p><i class="fa-solid fa-square"></i> Maintaining the leader status</p>
+          <p><i class="fa-solid fa-square"></i> Acquisitions the right way</p>
+          <p class="price">Starting at <span class="num">$299</span></p>
+          <div class="link">
+            <a href="#">DETAILS</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <section></section>
   <section></section>
   <section></section>
