--- a/index.html
+++ b/index.html
@@ -161,7 +161,34 @@
     </div>
   </section>
   <section></section>
-  <section></section>
+  <section id="testimonial" class="container">
+    <div class="testtext">
+      <h2>Read Our Customer Testimonials</h2>
+      <p>Our clients are our partners and we can not imagine a better <br>future for our company without helping them reach
+        their objectives</p>
+    </div>
+    <div class="cards">
+      <div class="card">
+        <img src="images/testimonial-1.jpg" alt="">
+        <p>I recommend Aria to every business owner or growth leader that wants to take his company to the next level.
+        </p>
+        <h4>Ronald Spice - Owner</h4>
+      </div>
+      <div class="card">
+        <img src="images/testimonial-2.jpg" alt="">
+        <p>I recommend Aria to every business owner or growth leader that wants to take his company to the next level.
+        </p>
+        <h4>Ronald Spice - Owner</h4>
+      </div>
+      <div class="card">
+        <img src="images/testimonial-3.jpg" alt="">
+        <p>I recommend Aria to every business owner or growth leader that wants to take his company to the next level.
+        </p>
+        <h4>Ronald Spice - Owner</h4>
+      </div>
+    </div>
+
+  </section>
   <section></section>
   <section></section>
   <section></section>
