--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
   <section id="testimonial" class="container">
     <div class="testtext">
       <h2>Read Our Customer Testimonials</h2>
-      <p>Our clients are our partners and we can not imagine a better <br>future for our company without helping them reach
+      <p>Our clients are our partners and we can not imagine a better <br>future for our company without helping them
+        reach
         their objectives</p>
     </div>
     <div class="cards">
@@ -190,22 +191,24 @@
 
   </section>
   <section id="callme">
-    <div class="left">
-      <h4>CALL ME</h4>
-      <h2>Have Us Contact You By Filling And Submitting The Form</h2>
-      <p>Have Us Contact You By Filling And Submitting The Form</p>
-      <p><i class="fa-solid fa-square"></i> It's very easy just fill in the form so we can call</p>
-      <p><i class="fa-solid fa-square"></i> During the call we'll require some info about the company</p>
-      <p><i class="fa-solid fa-square"></i> Don't hesitate to email us for any questions or inquiries</p>
-    </div>
-    <div class="right">
-      <input type="text">
-      <br>
-      <input type="tel">
-      <br>
-      <input type="email">
-      <br>
-      <input type="text">
+    <div class="flex container">
+      <div class="left">
+        <h4>CALL ME</h4>
+        <h2>Have Us Contact You By Filling And Submitting The Form</h2>
+        <p>Have Us Contact You By Filling And Submitting The Form</p>
+        <p><i class="fa-solid fa-square"></i> It's very easy just fill in the form so we can call</p>
+        <p><i class="fa-solid fa-square"></i> During the call we'll require some info about the company</p>
+        <p><i class="fa-solid fa-square"></i> Don't hesitate to email us for any questions or inquiries</p>
+      </div>
+      <div class="right">
+        <input type="text" placeholder="Name">
+        <input type="tel" placeholder="Phone">
+        <input type="email" placeholder="Email">
+        <input type="text" placeholder="Interested in...">
+        <p><input type="checkbox"> I agree with Aria's stated <a href="#">Privacy Policy</a> and <a href="#">Terms &
+            Conditions</a></p>
+        <a href="#" class="call">CALL ME</a>
+      </div>
     </div>
   </section>
   <section></section>
