--- a/index.html
+++ b/index.html
@@ -211,7 +211,22 @@
       </div>
     </div>
   </section>
-  <section></section>
+  <section id="project">
+    <div class="projectstitle">
+      <h4>PROJECTS</h4>
+      <h2>Projects That We're Proud Of</h2>
+    </div>
+    <div class="projectsimg">
+      <div class="project-img"><img src="images/project-1.jpg" alt=""></div>
+      <div class="project-img"><img src="images/project-2.jpg" alt=""></div>
+      <div class="project-img"><img src="images/project-3.jpg" alt=""></div>
+      <div class="project-img"><img src="images/project-4.jpg" alt=""></div>
+      <div class="project-img"><img src="images/project-5.jpg" alt=""></div>
+      <div class="project-img"><img src="images/project-6.jpg" alt=""></div>
+      <div class="project-img"><img src="images/project-7.jpg" alt=""></div>
+      <div class="project-img"><img src="images/project-8.jpg" alt=""></div>
+    </div>
+  </section>
   <section></section>
   <section></section>
   <section></section>
